--- a/pom.xml
+++ b/pom.xml
@@ -23,40 +23,45 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      	<groupId>junit</groupId>
+      	<artifactId>junit</artifactId>
+      	<version>3.8.1</version>
+      	<scope>test</scope>
     </dependency>
     <dependency>
-	  <groupId>javax.servlet</groupId>
-	  <artifactId>javax.servlet-api</artifactId>
-	  <version>4.0.1</version>
+	  	<groupId>javax.servlet</groupId>
+	  	<artifactId>javax.servlet-api</artifactId>
+	  	<version>4.0.1</version>
 	</dependency>
-    <dependency>
+<!--     <dependency>
 	  <groupId>javax.servlet.jsp</groupId>
 	  <artifactId>javax.servlet.jsp-api</artifactId>
 	  <version>2.3.3</version>
-	</dependency>
+	</dependency> -->
     <dependency>
 	  <groupId>javax.servlet</groupId>
 	  <artifactId>jstl</artifactId>
 	  <version>1.2</version>
 	</dependency>
 	<dependency>
-  	  <groupId>mysql</groupId>
-  	  <artifactId>mysql-connector-java</artifactId>
-  	  <version>8.0.19</version>
+  	  	<groupId>mysql</groupId>
+  	  	<artifactId>mysql-connector-java</artifactId>
+  	  	<version>8.0.19</version>
 	</dependency>
 	<dependency>
-  	  <groupId>com.mchange</groupId>
-  	  <artifactId>c3p0</artifactId>
-  	  <version>0.9.5.5</version>
+  	  	<groupId>com.mchange</groupId>
+  	  	<artifactId>c3p0</artifactId>
+  	  	<version>0.9.5.5</version>
 	</dependency>
 	<dependency>
-   	  <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>5.4.11.Final</version>
+   	  	<groupId>org.hibernate</groupId>
+     	<artifactId>hibernate-core</artifactId>
+      	<version>5.4.11.Final</version>
+	</dependency>
+	<dependency>
+   	  	<groupId>org.hibernate</groupId>
+      	<artifactId>hibernate-core</artifactId>
+      	<version>5.4.11.Final</version>
 	</dependency>
 	<dependency>
     	<groupId>org.hibernate</groupId>
@@ -64,9 +69,9 @@
     	<version>6.0.19.Final</version>
 	</dependency>
 	<dependency>
-	  <groupId>org.springframework</groupId>
-	  <artifactId>spring-webmvc</artifactId>
-	  <version>${springframework.version}</version>
+	  	<groupId>org.springframework</groupId>
+	  	<artifactId>spring-webmvc</artifactId>
+	  	<version>${springframework.version}</version>
 	</dependency>
 	<dependency>
     	<groupId>org.springframework</groupId>
@@ -74,35 +79,45 @@
     	<version>${springframework.version}</version>
 	</dependency>
 	<dependency>
-	  <groupId>org.springframework.security</groupId>
-	  <artifactId>spring-security-web</artifactId>
-	  <version>${springsecurity.version}</version>
+	  	<groupId>org.springframework.security</groupId>
+	 	<artifactId>spring-security-web</artifactId>
+	  	<version>${springsecurity.version}</version>
 	</dependency>
 	<dependency>
-	  <groupId>org.springframework.security</groupId>
-	  <artifactId>spring-security-config</artifactId>
-	  <version>${springsecurity.version}</version>
+	  	<groupId>org.springframework.security</groupId>
+	  	<artifactId>spring-security-config</artifactId>
+	  	<version>${springsecurity.version}</version>
 	</dependency>
 	<dependency>
-	  <groupId>org.springframework.security</groupId>
-	  <artifactId>spring-security-taglibs</artifactId>
-	  <version>${springsecurity.version}</version>
+	  	<groupId>org.springframework.security</groupId>
+	  	<artifactId>spring-security-taglibs</artifactId>
+	  	<version>${springsecurity.version}</version>
 	</dependency>
     <dependency>
-       <groupId>org.slf4j</groupId>
-       <artifactId>slf4j-api</artifactId>
-       <version>1.7.21</version>
+       	<groupId>org.slf4j</groupId>
+       	<artifactId>slf4j-api</artifactId>
+       	<version>1.7.21</version>
    	</dependency>
    	<dependency>
-       <groupId>org.slf4j</groupId>
-       <artifactId>slf4j-simple</artifactId>
-       <version>1.7.21</version>
+       	<groupId>org.slf4j</groupId>
+       	<artifactId>slf4j-simple</artifactId>
+       	<version>1.7.21</version>
    	</dependency>
    	<dependency>
-       <groupId>log4j</groupId>
-       <artifactId>log4j</artifactId>
-       <version>1.2.17</version>
+       	<groupId>log4j</groupId>
+       	<artifactId>log4j</artifactId>
+       	<version>1.2.17</version>
    	</dependency>
+   	<dependency>
+	  	<groupId>org.thymeleaf</groupId>
+	  	<artifactId>thymeleaf-spring5</artifactId>
+	  	<version>3.0.11.RELEASE</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.thymeleaf.extras</groupId>
+	    <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+	    <version>3.0.4.RELEASE</version>
+	</dependency>
   </dependencies>
 
   <build>
