--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # MySQL connection properties
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.jdbcUrl=jdbc:mysql://localhost:3306/macropro?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+jdbc.jdbcUrl=jdbc:mysql://localhost:3306/macropro?useSSL=false&allowPublicKeyRetrieval=true
+#&serverTimezone=UTC
+#&useLegacyDatetimeCode=false
 jdbc.username=root
 jdbc.password=knicks0607
 
@@ -8,6 +10,7 @@ jdbc.password=knicks0607
 hibernate.show_sql=true
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.packagesToScan=com.macropro
+#hibernate.jdbc.time_zone=UTC
 #hibernate.hbm2ddl.auto=validate
 
 # C3P0 properties
